--- a/style.css
+++ b/style.css
@@ -59,7 +59,7 @@
 .container-right {
     flex: 1;
     border: 1px solid aliceblue;
-    background-color: black;
+    background-color: rgba(0, 0, 0, 0.596);
     height: 90vh;
     padding: 1%;
 }
@@ -68,7 +68,7 @@
 #terminal {
     width: 100%;
     height: 300px;
-    background: black;
+  
     color: #00ff00;
     font-family: monospace;
     padding: 10px;
